# eu-ai-act-scanner

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  plugin.json  pyproject.toml
.github/workflows/: ci.yml  update-countdown.yml
commands/: ai-act-article.md  ai-act-ask.md  ai-act-incidents.md  ai-act-scan-fix.md  ai-act-scan.md  ai-act-settings.md
scanner/: __init__.py  cli.py  fix_loop.py  grounding.py  incident_grounding.py  kb.py  llm_bridge.py  mcp_server.py  models.py  obligations.py  orchestrator.py  qa.py  refs.py  settings.py
scanner/analyzers/: __init__.py  _base.py  adversarial_robustness.py  agent_cascade.py  agent_inventory.py  ai_frameworks.py  article_50_transparency.py  cicd_dockerfile.py  cloud_deployment.py  cloudformation_k8s.py  configuration.py  data_pipeline.py  documentation.py  fairness_testing.py  human_oversight.py  lethal_trifecta.py  logging_monitoring.py  model_typology.py  privilege_minimization.py  regulatory_perimeter.py  runtime_drift.py  security_controls.py  terraform.py  test_suite.py
scanner/data/: __init__.py  agentic_taxonomy.py  incident_corpus.py  incident_crosswalk.py  incidents.json  official_eu_ai_act.py  ontology.py  role_obligations.py
scripts/: sync_incident_corpus.py  update_readme_countdown.py
skills/: authoring-eu-ai-act-skills.md  eu-ai-act-annex-iv-guide.md  eu-ai-act-article-5-prohibited.md  eu-ai-act-article-50-transparency.md  eu-ai-act-article-6-classification.md  eu-ai-act-fria-guide.md  eu-ai-act-gpai-classification.md  eu-ai-act-incident-grounding.md  eu-ai-act-operator-roles.md  eu-ai-act-penalties.md  eu-ai-act-reference.md  eu-ai-act-timeline.md  interpreting-findings.md  using-eu-ai-act-scanner.md
tests/: test_agent_aware_scanners.py  test_article_50_transparency.py  test_countdown.py  test_fix_loop.py  test_grounding.py  test_incident_grounding.py  test_llm_bridge.py  test_mcp_server.py  test_obligations.py  test_qa.py  test_refs.py  test_scanners.py  test_settings.py
tests/fixtures/non_ai_project/: README.md  calculator.py
tests/fixtures/sample_project/: README.md  model.py  requirements.txt
tests/fixtures/sample_project/tests/: test_model.py
