[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-ai-act-scanner"
version = "0.6.0"
description = "Scan any codebase for EU AI Act (Regulation 2024/1689) compliance evidence and gaps, grounded in real-world AI security incidents and authoritative article text. 21 analyzers (incl. 7 agent-aware per Nannini et al. 2026), deterministic operator-role + obligation inference, a vendored GenAI/agentic-AI incident corpus crosswalked to OWASP LLM Top 10, OWASP Agentic (ASI), NIST AI RMF and MITRE ATLAS, an autonomous scan->fix->rescan loop with a regression guard, and an MCP server. Local-only static analysis with an optional Claude Max bridge, Claude Code plugin."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Andrei Bacu", email = "andrei@antifragile-ai.net" }]
requires-python = ">=3.11"
keywords = ["eu-ai-act", "compliance", "ai-safety", "static-analysis", "claude-code-plugin", "regulation-2024-1689"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.5",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.25"]
# MCP server (scanner.mcp_server) so non-Claude-Code agents can call the scanner.
mcp = ["mcp>=1.2"]
# Regenerating the vendored incident corpus from the HuggingFace dataset.
sync = ["pyarrow>=15"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
eu-ai-act-scan = "scanner.cli:main"
eu-ai-act-scan-mcp = "scanner.mcp_server:main"
eu-ai-act-fix = "scanner.fix_loop:main"

[project.urls]
Homepage = "https://github.com/Peaky8linders/eu-ai-act-scanner"
Repository = "https://github.com/Peaky8linders/eu-ai-act-scanner"
Issues = "https://github.com/Peaky8linders/eu-ai-act-scanner/issues"

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.setuptools.package-data]
"scanner.data" = ["*.json"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
norecursedirs = ["tests/fixtures"]
